// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Group > Capturing group > should parse simple capturing group 1`] = `
{
  "body": {
    "body": {
      "end": 3,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 3,
          "kind": "Char",
          "start": 3,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 2,
    },
    "end": 4,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "capturing",
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Common > should correctly parse nested groups 1`] = `
{
  "body": {
    "body": {
      "end": 6,
      "expressions": [
        {
          "charCode": 97,
          "end": 2,
          "kind": "Char",
          "start": 2,
          "type": "Simple",
          "value": "a",
        },
        {
          "body": {
            "charCode": 102,
            "end": 4,
            "kind": "Char",
            "start": 4,
            "type": "Simple",
            "value": "f",
          },
          "end": 5,
          "kind": "Group",
          "specifier": null,
          "start": 3,
          "type": "capturing",
        },
        {
          "charCode": 98,
          "end": 6,
          "kind": "Char",
          "start": 6,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 2,
    },
    "end": 7,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "capturing",
  },
  "end": 8,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Negative lookahead > should parse simple negative lookahead 1`] = `
{
  "body": {
    "body": {
      "end": 5,
      "expressions": [
        {
          "charCode": 97,
          "end": 4,
          "kind": "Char",
          "start": 4,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 5,
          "kind": "Char",
          "start": 5,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 4,
    },
    "end": 6,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "negativeLookahead",
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Negative lookbehind > should parse simple negative lookbehind 1`] = `
{
  "body": {
    "body": {
      "end": 6,
      "expressions": [
        {
          "charCode": 97,
          "end": 5,
          "kind": "Char",
          "start": 5,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 6,
          "kind": "Char",
          "start": 6,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 5,
    },
    "end": 7,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "negativeLookbehind",
  },
  "end": 8,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Non Capturing group > should parse simple non capturing group 1`] = `
{
  "body": {
    "body": {
      "end": 5,
      "expressions": [
        {
          "charCode": 97,
          "end": 4,
          "kind": "Char",
          "start": 4,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 5,
          "kind": "Char",
          "start": 5,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 4,
    },
    "end": 6,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "nonCapturing",
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Positive lookahead > should parse simple positive lookahead 1`] = `
{
  "body": {
    "body": {
      "end": 5,
      "expressions": [
        {
          "charCode": 97,
          "end": 4,
          "kind": "Char",
          "start": 4,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 5,
          "kind": "Char",
          "start": 5,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 4,
    },
    "end": 6,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "positiveLookahead",
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Group > Positive lookbehind > should parse simple positive lookbehind 1`] = `
{
  "body": {
    "body": {
      "end": 6,
      "expressions": [
        {
          "charCode": 97,
          "end": 5,
          "kind": "Char",
          "start": 5,
          "type": "Simple",
          "value": "a",
        },
        {
          "charCode": 98,
          "end": 6,
          "kind": "Char",
          "start": 6,
          "type": "Simple",
          "value": "b",
        },
      ],
      "kind": "Alternative",
      "start": 5,
    },
    "end": 7,
    "kind": "Group",
    "specifier": null,
    "start": 1,
    "type": "positiveLookbehind",
  },
  "end": 8,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
